tests/error/inout_errors/conflict.err
Error: Type mismatch (at $FILE:14:11)
   | 
12 | @guppy
13 | def test() -> Callable[[qubit @owned], qubit]:
14 |     return foo
   |            ^^^ Expected return value of type `qubit @owned -> qubit`, got
   |                `qubit -> qubit`

Guppy compilation failed due to 1 previous error
